# global-ao

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: debug_settings.cmake  setup_dependencies.cmake  setup_tests.cmake
cmake/dependencies/: .gitignore  setup_assimp.cmake  setup_glm.cmake  setup_stb.cmake  setup_tinyobjloader.cmake  setup_vulkan.cmake
dependencies/: setup_catch2.cmake  setup_glad.cmake  setup_glfw.cmake  setup_imgui.cmake
global-ao/: AOGenerator.cxx  AOGenerator.hxx  AOGeneratorCPU.cxx  AOGeneratorCPU.hxx  AmbientOcclusion.cxx  AmbientOcclusion.hxx  App.cxx  App.hxx  AttributeMap.cxx  AttributeMap.hxx  BVH.cxx  BVH.hxx  BufferObject.hxx  CMakeLists.txt  Camera.cxx  Camera.hxx  Compute.cxx  Compute.hxx  DepthMap.cxx  DepthMap.hxx  GAOGenerator.cxx  GAOGenerator.hxx  Gui.cxx  Gui.hxx  Mesh.cxx  Mesh.hxx  Model.cxx  Model.hxx  OcclusionMap.cxx  OcclusionMap.hxx  Primitives.hxx  Scene.cxx  Scene.hxx  Shader.cxx  Shader.hxx  ShaderProgram.cxx  ShaderProgram.hxx  Texture.cxx  Texture.hxx  TriangleMesh.cxx  (+3 more)
global-ao-testing/: CMakeLists.txt  test.cxx
global-ao-testing/shader/: accum.frag  accum.vert  basic.frag  basic.vert  depth.frag  gray.frag  gray.vert  uv.frag  uv.vert
global-ao/resource/: test.txt
global-ao/shader/: AOComputeFull.comp  accumulation3.frag  accumulation3.vert  basicFrag.glsl  depth.frag  depth.vert  gao.frag  gao.vert  occlusion.frag  occlusion.vert  ssaoBlurFrag.glsl  ssaoFrag.glsl  ssaoGeometryFrag.glsl  ssaoGeometryVert.glsl  ssaoLightingFrag.glsl  test.comp  test.frag  test.vert  texture.frag  texture.vert
global-ao/shader/v0/: occlusion.frag
global-ao/shader/v1/: accumulation.frag  occlusion.frag  occlusion.vert
global-ao/shader/v2/: occlusion.frag  occlusion.vert
global-ao/shader/v3/: occlusion.frag
learnings/: CMakeLists.txt
learnings/tobias/: CMakeLists.txt
learnings/tobias/learn-opengl/: CMakeLists.txt
tests/: CMakeLists.txt  dear-imgui.test.cxx  glm.test.cxx  window.test.cxx
vulkan-renderer/: CMakeLists.txt  demo.cxx
vulkan-renderer-demo/: CMakeLists.txt  demo.cxx
vulkan-renderer-demo/resources/models/: CMakeLists.txt
vulkan-renderer-demo/resources/textures/: CMakeLists.txt
vulkan-renderer/lib/: CMakeLists.txt
vulkan-renderer/lib/renderer/: CMakeLists.txt  command-buffers.cxx  command-buffers.hxx  command-pool.cxx  command-pool.hxx  depth-resources.cxx  depth-resources.hxx  descriptor-pool.cxx  descriptor-pool.hxx  descriptor-set-layout.cxx  descriptor-set-layout.hxx  descriptor-set-layouts.cxx  descriptor-set-layouts.hxx  descriptor-sets.cxx  descriptor-sets.hxx  descriptor-sets.txx  device.cxx  device.hxx  dynamic-loader.cxx  dynamic-loader.hxx  frame-buffer.cxx  frame-buffer.hxx  frame-buffers.cxx  frame-buffers.hxx  graphics-pipeline.cxx  graphics-pipeline.hxx  instance.cxx  instance.hxx  renderer.cxx  renderer.hxx  renderer.test.cxx  shader-module.cxx  shader-module.hxx  surface.cxx  surface.hxx  swap-chain-provider.cxx  swap-chain-provider.hxx  sync-objects-handler.cxx  sync-objects-handler.hxx  texture-image.cxx  (+5 more)
vulkan-renderer/lib/renderer/ambient-occlusion/: CMakeLists.txt  ambient-occlusion.cxx  ambient-occlusion.hxx
vulkan-renderer/lib/renderer/ambient-occlusion/pipelines/: CMakeLists.txt  accumulation-pipeline.cxx  accumulation-pipeline.hxx  depth-pipeline.cxx  depth-pipeline.hxx  occlusion-pipeline.cxx  occlusion-pipeline.hxx
vulkan-renderer/lib/renderer/buffer-objects/: CMakeLists.txt  depth-pipeline-uniform-buffer-object.hxx  occlusion-pipeline-uniform-buffer-object.cxx  occlusion-pipeline-uniform-buffer-object.hxx  uniform-buffer-object.cxx  uniform-buffer-object.hxx  vertex-object.cxx  vertex-object.hxx
vulkan-renderer/lib/renderer/buffers/: CMakeLists.txt  buffer.cxx  buffer.hxx  image-sampler.cxx  image-sampler.hxx  image.cxx  image.hxx  index-buffer.cxx  index-buffer.hxx  staging-buffer.cxx  staging-buffer.hxx  staging-buffer.txx  uniform-buffer-object.cxx  uniform-buffer.cxx  uniform-buffer.hxx  uniform-buffer.txx  vertex-buffer.cxx  vertex-buffer.hxx  vertex-object.cxx  vertex-object.hxx
vulkan-renderer/lib/renderer/shaders/: CMakeLists.txt  accumulation.frag  accumulation.vert  depth.frag  depth.vert  occlusion.frag  occlusion.vert  shader.frag  shader.vert
vulkan-renderer/lib/renderer/textures/: CMakeLists.txt  texture-image.cxx  texture-image.hxx  texture-sampler.cxx  texture-sampler.hxx
vulkan-renderer/lib/window/: CMakeLists.txt  window.cxx  window.hxx
